feat: add resposinve font size breakpoints, adjusted languages render flags on change langue product detail, excluded footer whit route.name, wip page detail

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -2,6 +2,14 @@
 html {
     box-sizing: border-box;
     font-size: 16px; // base font-size adjusted whit rem em
+
+    @media screen and (max-width: $breakpoint-lg) {
+        font-size: 15px;
+    }
+
+    @media screen and (max-width:$breakpoint-sm) {
+        font-size: 14px;
+    }
 }
 
 *,
