feat: removed vue3-toastify, add modal component dinamic whit slot, faq format changed and navbar watch updated

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -58,3 +58,13 @@ li {
     object-fit: cover;
     border-radius: 2px;
 }
+
+// classe per i link di redirect tra login e register
+.link-account {
+    display: inline-block;
+    width: fit-content;
+    color: $color-primary;
+    text-decoration: underline;
+    margin: 0 auto;
+    cursor: pointer;
+}
