feat: udpated scss file, will be removed temp style for vue files temp vars

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,3 +1,6 @@
+@use '../abstracts/' as *;
+
+
 // CTA BUTTON used in Home and Cart section (if cart is empty)
 .btn-one {
     background-color: #f7a380;
