--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 // MAIN PALETTE COLORS of the website crochet giogi
 $color-primary: #E88C66; // arancio volpe (caldo e vivace, elemento chiave del logo)
 $color-secondary: #F2C6B4; // rosa cipria (delicato e accogliente)
@@ -18,12 +20,15 @@ $color-gray-700: #495057;
 $color-gray-800: #343a40;
 $color-gray-900: #212529;
 
-// gradients
-$gradient-primary: linear-gradient(90deg, $color-secondary, $color-primary);
-$gradient-secondary: linear-gradient(120deg, $color-gray-900 0%, #ef723c 100%);
-$gradient-third: linear-gradient(135deg, $color-primary 0%, #b17c65 100%);
-$gradient-fourth: linear-gradient(135deg, lighten($color-primary, 5%) 0%, lighten(#dab6a8, 25%)100%);
-
 // background and text colors mains
 $body-bg: #fef1e6;
 $body-color: $color-gray-200;
+
+// gradients
+// gradients using sass:color to replace lighten()
+$gradient-primary: linear-gradient(90deg, $color-secondary, $color-primary);
+$gradient-secondary: linear-gradient(120deg, $color-gray-900 0%, #ef723c 100%);
+$gradient-third: linear-gradient(135deg, $color-primary 0%, #b17c65 100%);
+$gradient-fourth: linear-gradient(135deg,
+        color.adjust($color-primary, $lightness: 5%) 0%,
+        color.adjust(#dab6a8, $lightness: 25%) 100%);
