--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,3 +1,9 @@
+// @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
+
+// Espongo le variabili e i mixin come globali per semplificare il legacy:
+@use '../abstracts/' as *;
+
+
 // rules globals on the project
 html {
     box-sizing: border-box;
