feat: updated scss vite config pre processor, review of all the components if they work whit migration to new modern sass

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -43,3 +43,10 @@
         box-shadow: 0 3px 6px rgba($color-primary, 0.25);
     }
 }
+
+// BUTTON animation disable while fetching
+button[disabled=disabled],
+button:disabled {
+    color: $color-white;
+    background-color: $color-gray-700;
+}
