--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -31,8 +31,8 @@ body {
     background-attachment: fixed;
     background-position: center;
     position: relative;
-    color: $body-color;
-    font-family: $font-family-hand;
+    color: $color-gray-900;
+    font-family: $font-family-base;
     font-weight: $font-weight-normal;
     line-height: 1.5;
 }
