--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,5 +9,6 @@
 @use "./components/navbar";
 @use "./components/dropdown";
 @use "./components/scrollbar";
+@use "./components/headers"
 
 // --- START CSS OUTSIDE SCSS FILES USED ---
