--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,5 +1,3 @@
-// @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
-
 // Espongo le variabili e i mixin come globali per semplificare il legacy:
 @use '../abstracts/' as *;
 
@@ -26,12 +24,8 @@ html {
 
 body {
     min-height: 100vh;
-    background-image: url("https://marketplace.canva.com/EAFJbICKdWA/1/0/1600w/canva-autumn-hues-illustrated-pattern-desktop-wallpaper-GLs7iM8Vclo.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    position: relative;
-    color: $color-gray-900;
+    background-color: $body-bg;
+    color: $color-black;
     font-family: $font-family-base;
     font-weight: $font-weight-normal;
     line-height: 1.5;
