feat: udpated fonts and dropdown user and languages style

--- a/src/styles/components/_dropdown.scss
+++ b/src/styles/components/_dropdown.scss
@@ -2,7 +2,7 @@
 
 .dropdown-menu {
     background-color: $color-white;
-    border: 1px solid $color-gray-700;
+    border: none;
     border-radius: 5px;
 
     .dropdown-item {
