--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -49,7 +49,17 @@
      }
 
      .hint {
-         color: $color-gray-700;
+         color: $color-gray-500;
+     }
+
+     // classe per i link di redirect tra login e register
+     .link-account {
+         display: inline-block;
+         width: fit-content;
+         color: $color-secondary;
+         text-decoration: underline;
+         margin: 0 auto;
+         cursor: pointer;
      }
 
      // UTILIZZA CON button -> btn-two!
