feat: moves from public images logos in assets src/, update global style of components, implemented quick add cart from card product preview

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -24,7 +24,7 @@ html {
 
 body {
     min-height: 100vh;
-    background-color: $body-bg;
+    background: radial-gradient(125% 125% at 50% 10%, #fac696 40%, white 100%); // gradient di sfondo principale
     color: $color-black;
     font-family: $font-family-base;
     font-weight: $font-weight-normal;
