--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -5,6 +5,7 @@
     color: inherit;
     font-weight: $font-weight-normal;
     text-decoration: none;
+    padding: 7px 15px;
     transition: color 0.1s;
 }
 
@@ -15,7 +16,11 @@
 
 // stile per il link attivo
 .nav-link a.router-link-active {
+    background-color: #f4f4f482;
     font-weight: $font-weight-bold;
-    padding-bottom: 6px;
-    border-bottom: 2px solid $color-primary-500;
+    border-radius: 20px;
+
+    &:hover {
+        color: $color-black;
+    }
 }
