feat: upgraded reviews component style and layout

--- a/src/styles/components/_headers.scss
+++ b/src/styles/components/_headers.scss
@@ -4,3 +4,8 @@ h2.header {
     font-size: 3rem;
     font-family: $font-family-hand;
 }
+
+h3.header {
+    font-size: 2.5rem;
+    font-family: $font-family-hand;
+}
