feat: updated modals review wip reiew and implemented first demo of it

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @use "./components/navbar";
 @use "./components/dropdown";
 @use "./components/scrollbar";
-@use "./components/headers"
+@use "./components/headers";
+@use "./components/modals";
 
 // --- START CSS OUTSIDE SCSS FILES USED ---
